Made this slightly more useful with some additional pages and links.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   include header
   body
     include navbar
-    #container.col-sm-2
+    #container.col-sm-2.text-center
       h3 This is a sidebar
       p I'm on the side
     #container.col-sm-10
