--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -1,12 +1,13 @@
 #container.navbar.navbar-default.navbar-fixed-top
   #container.container
     #container.navbar-header
-      a(href="#" class="navbar-brand") Brand
+      a(href="/index" class="navbar-brand").
+        Model U.N.
     ul.nav.navbar-nav
       li
-        a(href="#") A link
+        a(href="/about") About
       li
-        a(href="#") Another
+        a(href="/links") Links
     ul.nav.navbar-nav.navbar-right
       li
         a(href="/logout") Logout
