--- a/views/login.jade
+++ b/views/login.jade
@@ -3,7 +3,7 @@ extends layout
 
 block content
     h1 Login
-    h4 Try hitting /index
+    h4 Try hitting /index or any of the links above
     h4 Then try logging in as ryan // password
     #container.col-sm-5
         form(method="POST" action="/login" role="form" class="form-horizontal")
