--- a/views/login.jade
+++ b/views/login.jade
@@ -6,6 +6,7 @@ block content
     h4 Try hitting /index or any of the links above
     h4 Then try logging in as ryan // password
     #container.col-sm-5
+        // I love the way forms look in Jade. Saves so much room
         form(method="POST" action="/login" role="form" class="form-horizontal")
             div.form-group
                 label Username:
