--- a/views/header.jade
+++ b/views/header.jade
@@ -1,4 +1,5 @@
 head
     title Test Application
+    // Up here we include the css
     link(rel="stylesheet", href="/css/bootstrap.css")
     link(rel="stylesheet", href="/css/bootstrap-theme.css")
